--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -1,24 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Tietokantasovellus</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
-        <style>
-            h1 { font-size: 1.4em; }
-            h2 { font-size: 1.1em; }
-        </style>
-    </head>
-    <body>
-        <h1>Tietokantasovelluksen esittelysivu</h1>
-        <p>Yleisiä linkkejä</p>
-        <ul>
-            <li><a href="https://github.com/PunyW/tsoha">Työn repositorio</a></li>
-            <li><a href="https://github.com/PunyW/tsoha/blob/master/doc/dokumentaatio.pdf?raw=true">Työn dokumentaatio</a></li>
-        </ul>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="Joel Järvinen">
 
-        <h2>Työn aihe</h2>
-        <a href="http://advancedkittenry.github.io/suunnittelu_ja_tyoymparisto/aiheet/Ostoskassi.html">
-            Ostoskassi</a>
+        <title>
+            Esittelysivu
+        </title>
+
+        <link href="assets/css/bootstrap.css" rel="stylesheet">
+        <link href="assets/css/bootstrap-theme.css" rel="stylesheet">
+        <link href="assets/css/main.css" rel="stylesheet">
+
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
+    </head>
+
+    <body>
+        <div class="container">
+            <h1>Tietokantasovelluksen esittelysivu</h1>
+            <div class="panel panel-info">
+                <div class="panel panel-heading">Yleisiä linkkejä</div>
+                <ul>
+                    <li><a href="https://github.com/PunyW/tsoha">Työn repositorio</a></li>
+                    <li><a href="https://github.com/PunyW/tsoha/blob/master/doc/dokumentaatio.pdf?raw=true">Työn dokumentaatio</a></li>
+                </ul>
+            </div>
+
+            <div class="panel panel-info">
+                <div class="panel panel-heading">Työn aihe</div>
+                <ul>
+                    <li><a href="http://advancedkittenry.github.io/suunnittelu_ja_tyoymparisto/aiheet/Ostoskassi.html">
+                            Ostoskassi</a></li>
+                </ul>
+            </div>
+
+            <div class="panel panel-info">
+                <div class="panel panel-heading">Viikko 2</div>
+                <ul>
+                    <li><a href="http://jajojajo.users.cs.helsinki.fi/connectiontest.php">Connectiontest-ohjelma</a></li>
+                    <li><a href="http://jajojajo.users.cs.helsinki.fi/tsoha/html-demo/index.php">HTML-demosivujen etusivu</a></li>
+                    <li><a href="http://jajojajo.users.cs.helsinki.fi/tsoha/html-demo/listaustesti.php">Ensimmäinen oma tietokantalistaus</a></li>
+                </ul>
+            </div>
+
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+            <script src="assets/js/bootstrap.js"></script>
     </body>
 </html>
