--- a/html-demo/login.html
+++ b/html-demo/login.html
@@ -4,9 +4,9 @@
         <title>Login</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <link href="../css/bootstrap.css" rel="stylesheet">
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
-        <link href="../css/signin.css" rel="stylesheet">
+        <link href="../assets/css/bootstrap.css" rel="stylesheet">
+        <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../assets/css/signin.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
