--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -49,8 +49,9 @@
                     <li><a href="http://jajojajo.users.cs.helsinki.fi/tsoha/html-demo/listaustesti.php">Ensimmäinen oma tietokantalistaus</a></li>
                 </ul>
             </div>
+        </div>
 
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-            <script src="assets/js/bootstrap.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="assets/js/bootstrap.js"></script>
     </body>
 </html>
